# visual-pushing-grasping

./: .gitignore  LICENSE  README.md  calibrate.py  create.py  debug.py  evaluate.py  guard.py  logger.py  main.py  models.py  plot.py  robot.py  touch.py  trainer.py  utils.py
downloads/: download-weights.sh
real/: calibrate.py  camera.py  camera_depth_scale.txt  camera_intrinsics.txt  camera_pose.txt  capture.py  touch.py
realsense/: CMakeLists.txt  example.hpp  realsense.cpp
simulation/: create_test.py  simulation.ttt  vrep.py  vrepConst.py
simulation/test-cases/: test-10-obj-00.txt  test-10-obj-01.txt  test-10-obj-02.txt  test-10-obj-03.txt  test-10-obj-04.txt  test-10-obj-05.txt  test-10-obj-06.txt  test-10-obj-07.txt  test-10-obj-08.txt  test-10-obj-09.txt  test-10-obj-10.txt
